grammar/output/StrLangParser.java
// $ANTLR 3.4 src\\grammar\\StrLang.g 2012-04-06 16:22:50

	package grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class StrLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN_OP", "COMMENT", "DOUBLE_MINUS", "DOUBLE_PLUS", "END_LINE", "EQUALLY_EQL_OP", "ID", "INT", "INT_TYPE", "LESS_EQL_OP", "LESS_OP", "LINE", "LINE_TYPE", "MINUS_OP", "MORE_EQL_OP", "MORE_OP", "NO_EQUALLY", "PLUS_OP", "SYMBOL", "SYMBOL_TYPE", "VOID_TYPE", "WS", "'('", "')'", "','", "';'", "'ReadFile'", "'WriteToFile'", "'and'", "'break'", "'elem'", "'else'", "'for'", "'if'", "'length'", "'or'", "'print'", "'return'", "'while'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int ASSIGN_OP=4;
    public static final int COMMENT=5;
    public static final int DOUBLE_MINUS=6;
    public static final int DOUBLE_PLUS=7;
    public static final int END_LINE=8;
    public static final int EQUALLY_EQL_OP=9;
    public static final int ID=10;
    public static final int INT=11;
    public static final int INT_TYPE=12;
    public static final int LESS_EQL_OP=13;
    public static final int LESS_OP=14;
    public static final int LINE=15;
    public static final int LINE_TYPE=16;
    public static final int MINUS_OP=17;
    public static final int MORE_EQL_OP=18;
    public static final int MORE_OP=19;
    public static final int NO_EQUALLY=20;
    public static final int PLUS_OP=21;
    public static final int SYMBOL=22;
    public static final int SYMBOL_TYPE=23;
    public static final int VOID_TYPE=24;
    public static final int WS=25;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public StrLangParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public StrLangParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return StrLangParser.tokenNames; }
    public String getGrammarFileName() { return "src\\grammar\\StrLang.g"; }



    // $ANTLR start "program"
    // src\\grammar\\StrLang.g:15:1: program : ( global_decl )+ ;
    public final void program() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:16:2: ( ( global_decl )+ )
            // src\\grammar\\StrLang.g:16:4: ( global_decl )+
            {
            // src\\grammar\\StrLang.g:16:4: ( global_decl )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID||LA1_0==INT_TYPE||LA1_0==LINE_TYPE||(LA1_0 >= SYMBOL_TYPE && LA1_0 <= VOID_TYPE)||(LA1_0 >= 30 && LA1_0 <= 31)||(LA1_0 >= 33 && LA1_0 <= 34)||LA1_0==38||LA1_0==40) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src\\grammar\\StrLang.g:16:4: global_decl
            	    {
            	    pushFollow(FOLLOW_global_decl_in_program38);
            	    global_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "program"



    // $ANTLR start "global_decl"
    // src\\grammar\\StrLang.g:19:1: global_decl : ( variables | global_func | func );
    public final void global_decl() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:20:2: ( variables | global_func | func )
            int alt2=3;
            switch ( input.LA(1) ) {
            case INT_TYPE:
            case LINE_TYPE:
            case SYMBOL_TYPE:
            case VOID_TYPE:
                {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_4 = input.LA(3);

                    if ( (LA2_4==26) ) {
                        alt2=2;
                    }
                    else if ( (LA2_4==EOF||LA2_4==ASSIGN_OP||LA2_4==ID||LA2_4==INT_TYPE||(LA2_4 >= LINE_TYPE && LA2_4 <= MINUS_OP)||LA2_4==PLUS_OP||(LA2_4 >= SYMBOL_TYPE && LA2_4 <= VOID_TYPE)||(LA2_4 >= 30 && LA2_4 <= 31)||(LA2_4 >= 33 && LA2_4 <= 34)||LA2_4==38||LA2_4==40) ) {
                        alt2=1;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 4, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
                }
                break;
            case ID:
                {
                int LA2_2 = input.LA(2);

                if ( (LA2_2==ASSIGN_OP) ) {
                    alt2=1;
                }
                else if ( (LA2_2==26) ) {
                    alt2=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 2, input);

                    throw nvae;

                }
                }
                break;
            case 30:
            case 31:
            case 33:
            case 34:
            case 38:
            case 40:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // src\\grammar\\StrLang.g:20:4: variables
                    {
                    pushFollow(FOLLOW_variables_in_global_decl50);
                    variables();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\grammar\\StrLang.g:21:4: global_func
                    {
                    pushFollow(FOLLOW_global_func_in_global_decl55);
                    global_func();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // src\\grammar\\StrLang.g:22:4: func
                    {
                    pushFollow(FOLLOW_func_in_global_decl60);
                    func();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "global_decl"



    // $ANTLR start "func"
    // src\\grammar\\StrLang.g:25:1: func : ( inside_func | call_func );
    public final void func() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:26:2: ( inside_func | call_func )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0 >= 30 && LA3_0 <= 31)||(LA3_0 >= 33 && LA3_0 <= 34)||LA3_0==38||LA3_0==40) ) {
                alt3=1;
            }
            else if ( (LA3_0==ID) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // src\\grammar\\StrLang.g:26:4: inside_func
                    {
                    pushFollow(FOLLOW_inside_func_in_func71);
                    inside_func();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\grammar\\StrLang.g:27:4: call_func
                    {
                    pushFollow(FOLLOW_call_func_in_func76);
                    call_func();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "func"



    // $ANTLR start "variables"
    // src\\grammar\\StrLang.g:30:1: variables : ( decl_var | init_var );
    public final void variables() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:31:2: ( decl_var | init_var )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==INT_TYPE||LA4_0==LINE_TYPE||(LA4_0 >= SYMBOL_TYPE && LA4_0 <= VOID_TYPE)) ) {
                alt4=1;
            }
            else if ( (LA4_0==ID) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // src\\grammar\\StrLang.g:31:3: decl_var
                    {
                    pushFollow(FOLLOW_decl_var_in_variables86);
                    decl_var();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\grammar\\StrLang.g:32:3: init_var
                    {
                    pushFollow(FOLLOW_init_var_in_variables90);
                    init_var();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "variables"



    // $ANTLR start "decl_var"
    // src\\grammar\\StrLang.g:35:1: decl_var : type ID ( ASSIGN_OP spec_type )? ( ( PLUS_OP | MINUS_OP ) spec_type )* ;
    public final void decl_var() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:36:2: ( type ID ( ASSIGN_OP spec_type )? ( ( PLUS_OP | MINUS_OP ) spec_type )* )
            // src\\grammar\\StrLang.g:36:4: type ID ( ASSIGN_OP spec_type )? ( ( PLUS_OP | MINUS_OP ) spec_type )*
            {
            pushFollow(FOLLOW_type_in_decl_var102);
            type();

            state._fsp--;


            match(input,ID,FOLLOW_ID_in_decl_var104); 

            // src\\grammar\\StrLang.g:36:12: ( ASSIGN_OP spec_type )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ASSIGN_OP) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // src\\grammar\\StrLang.g:36:14: ASSIGN_OP spec_type
                    {
                    match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_decl_var108); 

                    pushFollow(FOLLOW_spec_type_in_decl_var110);
                    spec_type();

                    state._fsp--;


                    }
                    break;

            }


            // src\\grammar\\StrLang.g:36:36: ( ( PLUS_OP | MINUS_OP ) spec_type )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==MINUS_OP||LA6_0==PLUS_OP) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // src\\grammar\\StrLang.g:36:37: ( PLUS_OP | MINUS_OP ) spec_type
            	    {
            	    if ( input.LA(1)==MINUS_OP||input.LA(1)==PLUS_OP ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_spec_type_in_decl_var121);
            	    spec_type();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "decl_var"



    // $ANTLR start "init_var"
    // src\\grammar\\StrLang.g:39:1: init_var : ID ASSIGN_OP spec_type ( ( PLUS_OP | MINUS_OP ) spec_type )* ;
    public final void init_var() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:40:2: ( ID ASSIGN_OP spec_type ( ( PLUS_OP | MINUS_OP ) spec_type )* )
            // src\\grammar\\StrLang.g:40:4: ID ASSIGN_OP spec_type ( ( PLUS_OP | MINUS_OP ) spec_type )*
            {
            match(input,ID,FOLLOW_ID_in_init_var137); 

            match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_init_var140); 

            pushFollow(FOLLOW_spec_type_in_init_var142);
            spec_type();

            state._fsp--;


            // src\\grammar\\StrLang.g:40:28: ( ( PLUS_OP | MINUS_OP ) spec_type )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==MINUS_OP||LA7_0==PLUS_OP) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // src\\grammar\\StrLang.g:40:29: ( PLUS_OP | MINUS_OP ) spec_type
            	    {
            	    if ( input.LA(1)==MINUS_OP||input.LA(1)==PLUS_OP ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    pushFollow(FOLLOW_spec_type_in_init_var151);
            	    spec_type();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "init_var"



    // $ANTLR start "inside_func"
    // src\\grammar\\StrLang.g:44:1: inside_func : ( elem | length | print_op | break_op | read_op | write_op );
    public final void inside_func() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:45:2: ( elem | length | print_op | break_op | read_op | write_op )
            int alt8=6;
            switch ( input.LA(1) ) {
            case 34:
                {
                alt8=1;
                }
                break;
            case 38:
                {
                alt8=2;
                }
                break;
            case 40:
                {
                alt8=3;
                }
                break;
            case 33:
                {
                alt8=4;
                }
                break;
            case 30:
                {
                alt8=5;
                }
                break;
            case 31:
                {
                alt8=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // src\\grammar\\StrLang.g:45:4: elem
                    {
                    pushFollow(FOLLOW_elem_in_inside_func166);
                    elem();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // src\\grammar\\StrLang.g:46:4: length
                    {
                    pushFollow(FOLLOW_length_in_inside_func172);
                    length();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // src\\grammar\\StrLang.g:47:4: print_op
                    {
                    pushFollow(FOLLOW_print_op_in_inside_func177);
                    print_op();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // src\\grammar\\StrLang.g:48:4: break_op
                    {
                    pushFollow(FOLLOW_break_op_in_inside_func184);
                    break_op();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // src\\grammar\\StrLang.g:49:4: read_op
                    {
                    pushFollow(FOLLOW_read_op_in_inside_func189);
                    read_op();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // src\\grammar\\StrLang.g:50:4: write_op
                    {
                    pushFollow(FOLLOW_write_op_in_inside_func195);
                    write_op();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "inside_func"



    // $ANTLR start "call_func"
    // src\\grammar\\StrLang.g:53:1: call_func : ID '(' ( param )? ')' ;
    public final void call_func() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:54:2: ( ID '(' ( param )? ')' )
            // src\\grammar\\StrLang.g:54:4: ID '(' ( param )? ')'
            {
            match(input,ID,FOLLOW_ID_in_call_func207); 

            match(input,26,FOLLOW_26_in_call_func209); 

            // src\\grammar\\StrLang.g:54:11: ( param )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ID||LA9_0==INT_TYPE||LA9_0==LINE_TYPE||(LA9_0 >= SYMBOL_TYPE && LA9_0 <= VOID_TYPE)) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // src\\grammar\\StrLang.g:54:11: param
                    {
                    pushFollow(FOLLOW_param_in_call_func211);
                    param();

                    state._fsp--;


                    }
                    break;

            }


            match(input,27,FOLLOW_27_in_call_func214); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "call_func"



    // $ANTLR start "action"
    // src\\grammar\\StrLang.g:57:1: action : spec_type ( DOUBLE_MINUS | DOUBLE_PLUS | ASSIGN_OP spec_type ( PLUS_OP | MINUS_OP ) spec_type ) ;
    public final void action() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:58:2: ( spec_type ( DOUBLE_MINUS | DOUBLE_PLUS | ASSIGN_OP spec_type ( PLUS_OP | MINUS_OP ) spec_type ) )
            // src\\grammar\\StrLang.g:58:4: spec_type ( DOUBLE_MINUS | DOUBLE_PLUS | ASSIGN_OP spec_type ( PLUS_OP | MINUS_OP ) spec_type )
            {
            pushFollow(FOLLOW_spec_type_in_action227);
            spec_type();

            state._fsp--;


            // src\\grammar\\StrLang.g:58:14: ( DOUBLE_MINUS | DOUBLE_PLUS | ASSIGN_OP spec_type ( PLUS_OP | MINUS_OP ) spec_type )
            int alt10=3;
            switch ( input.LA(1) ) {
            case DOUBLE_MINUS:
                {
                alt10=1;
                }
                break;
            case DOUBLE_PLUS:
                {
                alt10=2;
                }
                break;
            case ASSIGN_OP:
                {
                alt10=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 10, 0, input);

                throw nvae;

            }

            switch (alt10) {
                case 1 :
                    // src\\grammar\\StrLang.g:58:15: DOUBLE_MINUS
                    {
                    match(input,DOUBLE_MINUS,FOLLOW_DOUBLE_MINUS_in_action230); 

                    }
                    break;
                case 2 :
                    // src\\grammar\\StrLang.g:58:28: DOUBLE_PLUS
                    {
                    match(input,DOUBLE_PLUS,FOLLOW_DOUBLE_PLUS_in_action232); 

                    }
                    break;
                case 3 :
                    // src\\grammar\\StrLang.g:58:40: ASSIGN_OP spec_type ( PLUS_OP | MINUS_OP ) spec_type
                    {
                    match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_action234); 

                    pushFollow(FOLLOW_spec_type_in_action236);
                    spec_type();

                    state._fsp--;


                    if ( input.LA(1)==MINUS_OP||input.LA(1)==PLUS_OP ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    pushFollow(FOLLOW_spec_type_in_action244);
                    spec_type();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "action"



    // $ANTLR start "spec_type"
    // src\\grammar\\StrLang.g:61:1: spec_type : ( INT | LINE | SYMBOL | ID | inside_func | call_func );
    public final void spec_type() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:62:2: ( INT | LINE | SYMBOL | ID | inside_func | call_func )
            int alt11=6;
            switch ( input.LA(1) ) {
            case INT:
                {
                alt11=1;
                }
                break;
            case LINE:
                {
                alt11=2;
                }
                break;
            case SYMBOL:
                {
                alt11=3;
                }
                break;
            case ID:
                {
                int LA11_4 = input.LA(2);

                if ( (LA11_4==26) ) {
                    alt11=6;
                }
                else if ( (LA11_4==EOF||LA11_4==ASSIGN_OP||(LA11_4 >= DOUBLE_MINUS && LA11_4 <= DOUBLE_PLUS)||LA11_4==ID||LA11_4==INT_TYPE||(LA11_4 >= LINE_TYPE && LA11_4 <= MINUS_OP)||LA11_4==PLUS_OP||(LA11_4 >= SYMBOL_TYPE && LA11_4 <= VOID_TYPE)||(LA11_4 >= 27 && LA11_4 <= 31)||(LA11_4 >= 33 && LA11_4 <= 34)||(LA11_4 >= 36 && LA11_4 <= 38)||(LA11_4 >= 40 && LA11_4 <= 42)||LA11_4==44) ) {
                    alt11=4;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 11, 4, input);

                    throw nvae;

                }
                }
                break;
            case 30:
            case 31:
            case 33:
            case 34:
            case 38:
            case 40:
                {
                alt11=5;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 11, 0, input);

                throw nvae;

            }

            switch (alt11) {
                case 1 :
                    // src\\grammar\\StrLang.g:62:4: INT
                    {
                    match(input,INT,FOLLOW_INT_in_spec_type261); 

                    }
                    break;
                case 2 :
                    // src\\grammar\\StrLang.g:63:4: LINE
                    {
                    match(input,LINE,FOLLOW_LINE_in_spec_type267); 

                    }
                    break;
                case 3 :
                    // src\\grammar\\StrLang.g:64:4: SYMBOL
                    {
                    match(input,SYMBOL,FOLLOW_SYMBOL_in_spec_type272); 

                    }
                    break;
                case 4 :
                    // src\\grammar\\StrLang.g:65:4: ID
                    {
                    match(input,ID,FOLLOW_ID_in_spec_type278); 

                    }
                    break;
                case 5 :
                    // src\\grammar\\StrLang.g:66:4: inside_func
                    {
                    pushFollow(FOLLOW_inside_func_in_spec_type284);
                    inside_func();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // src\\grammar\\StrLang.g:67:4: call_func
                    {
                    pushFollow(FOLLOW_call_func_in_spec_type289);
                    call_func();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "spec_type"



    // $ANTLR start "type"
    // src\\grammar\\StrLang.g:70:1: type : ( LINE_TYPE | INT_TYPE | VOID_TYPE | SYMBOL_TYPE );
    public final void type() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:71:2: ( LINE_TYPE | INT_TYPE | VOID_TYPE | SYMBOL_TYPE )
            // src\\grammar\\StrLang.g:
            {
            if ( input.LA(1)==INT_TYPE||input.LA(1)==LINE_TYPE||(input.LA(1) >= SYMBOL_TYPE && input.LA(1) <= VOID_TYPE) ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "type"



    // $ANTLR start "global_func"
    // src\\grammar\\StrLang.g:74:1: global_func : type ID '(' ( param )* ')' '{' ( body )? ( return_op )? '}' ;
    public final void global_func() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:75:2: ( type ID '(' ( param )* ')' '{' ( body )? ( return_op )? '}' )
            // src\\grammar\\StrLang.g:75:4: type ID '(' ( param )* ')' '{' ( body )? ( return_op )? '}'
            {
            pushFollow(FOLLOW_type_in_global_func326);
            type();

            state._fsp--;


            match(input,ID,FOLLOW_ID_in_global_func328); 

            match(input,26,FOLLOW_26_in_global_func330); 

            // src\\grammar\\StrLang.g:75:16: ( param )*
            loop12:
            do {
                int alt12=2;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==ID||LA12_0==INT_TYPE||LA12_0==LINE_TYPE||(LA12_0 >= SYMBOL_TYPE && LA12_0 <= VOID_TYPE)) ) {
                    alt12=1;
                }


                switch (alt12) {
            	case 1 :
            	    // src\\grammar\\StrLang.g:75:16: param
            	    {
            	    pushFollow(FOLLOW_param_in_global_func332);
            	    param();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);


            match(input,27,FOLLOW_27_in_global_func335); 

            match(input,43,FOLLOW_43_in_global_func337); 

            // src\\grammar\\StrLang.g:75:31: ( body )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==ID||LA13_0==INT_TYPE||LA13_0==LINE_TYPE||(LA13_0 >= SYMBOL_TYPE && LA13_0 <= VOID_TYPE)||(LA13_0 >= 30 && LA13_0 <= 31)||(LA13_0 >= 33 && LA13_0 <= 34)||(LA13_0 >= 36 && LA13_0 <= 38)||LA13_0==40||LA13_0==42) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // src\\grammar\\StrLang.g:75:31: body
                    {
                    pushFollow(FOLLOW_body_in_global_func339);
                    body();

                    state._fsp--;


                    }
                    break;

            }


            // src\\grammar\\StrLang.g:75:37: ( return_op )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==41) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // src\\grammar\\StrLang.g:75:37: return_op
                    {
                    pushFollow(FOLLOW_return_op_in_global_func342);
                    return_op();

                    state._fsp--;


                    }
                    break;

            }


            match(input,44,FOLLOW_44_in_global_func345); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "global_func"



    // $ANTLR start "param"
    // src\\grammar\\StrLang.g:78:1: param : ( type )? ID ( '=' ( type )? ( INT | ID ) )? ( ',' ( type )? ID ( '=' ( type )? ( INT | ID ) )? )* ;
    public final void param() throws RecognitionException {
        try {
            // src\\grammar\\StrLang.g:79:2: ( ( type )? ID ( '=' ( type )? ( INT | ID ) )? ( ',' ( type )? ID ( '=' ( type )? ( INT | ID ) )? )* )
            // src\\grammar\\StrLang.g:79:4: ( type )? ID ( '=' ( type )? ( INT | ID ) )? ( ',' ( type )? ID ( '=' ( type )? ( INT | ID ) )? )*
            {
            // src\\grammar\\StrLang.g:79:4: ( type )?
            int alt15=2;
            int LA15_0 = input.LA(1);

            if ( (LA15_0==INT_TYPE||LA15_0==LINE_TYPE||(LA15_0 >= SYMBOL_TYPE && LA15_0 <= VOID_TYPE)) ) {
                alt15=1;
            }
            switch (alt15) {
                case 1 :
                    // src\\grammar\\StrLang.g:79:6: type
                    {
                    pushFollow(FOLLOW_type_in_param361);
                    type();

                    state._fsp--;


                    }
                    break;

            }


            match(input,ID,FOLLOW_ID_in_param365); 

            // src\\grammar\\StrLang.g:79:16: ( '=' ( type )? ( INT | ID ) )?
            int alt17=2;
            int LA17_0 = input.LA(1);

            if ( (LA17_0==ASSIGN_OP) ) {
                alt17=1;
            }
            switch (alt17) {
                case 1 :
                    // src\\grammar\\StrLang.g:79:17: '=' ( type )? ( INT | ID )
                    {
                    match(input,ASSIGN_OP,FOLLOW_ASSIGN_OP_in_param368); 

                    // src\\grammar\\StrLang.g:79:21: ( type )?
                    int alt16=2;
                    int LA16_0 = input.LA(1);
